actualizado con tablas, entregable 3 en proceso

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li class="nav-item active"><a href="./index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="./matches.html" class="nav-link">Resultados</a></li>
           <li class="nav-item active"><a href="./standing.html" class="nav-link">Clasificación</a></li>
+          <li class="nav-item active"><a href="./stats.html" class="nav-link">Stats</a></li>
         </ul>
       </div>
     </div>
