--- a/stats.html
+++ b/stats.html
@@ -50,7 +50,7 @@
                 </tr>
             </thead>
 
-            <tbody id="tablapartidos">
+            <tbody id="tablastats">
 
             </tbody>
         </table>
