--- a/stats.html
+++ b/stats.html
@@ -43,7 +43,7 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Nombre</th>
+                    <th colspan="2">Nombre</th>
                     <th>Goles</th>
                     <th>Partidos</th>
                     <th>Avg</th>
@@ -51,6 +51,24 @@
             </thead>
 
             <tbody id="tablastats">
+
+            </tbody>
+        </table>
+
+    </div>
+
+    <div class="container tablecont table_contra">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th colspan="2">Nombre</th>
+                    <th>Goles en contra como visitante</th>
+                    <th>Partidos jugados</th>
+                    
+                </tr>
+            </thead>
+
+            <tbody id="tablacontra">
 
             </tbody>
         </table>
