filtro búsqueda de nombres creado

--- a/standing.html
+++ b/standing.html
@@ -36,9 +36,11 @@
     </div>
   </nav>
 
+  <input class="form-control boton" type="text" id="myInput" onkeyup="buscarnombre()" placeholder="Search for names.." title="Type in a name">
+
 
   <div class="container tablecont">
-    <table class="table table-hover tableclasi">
+    <table class="table table-hover tableclasi" id="tablaclasificacion">
       <thead class="thead-dark">
         <tr>
           <th class="posicion"></th>
