--- a/matches.html
+++ b/matches.html
@@ -37,16 +37,16 @@
     </div>
   </nav>
 
+  <input class="form-control boton" type="text" id="myInput" onkeyup="buscarnombre()" placeholder="Search for names.." title="Type in a name">
 
 
-
-  <div class="container tablecont table_matches">
+  <div class="container tablecont table_matches" id="tablaencuentros">
     <table class="table table-hover">
       <thead>
         <tr>
-          <th colspan="2">Local</th>
+          <th colspan="2" id="thlocal">Local</th>
           <th class="thresultado">Resultado</th>
-          <th colspan="2" class="thvisitante">Visitante</th>
+          <th colspan="2" class="thvisitante" id="thvisitanteid">Visitante</th>
         </tr>
       </thead>
 
