--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clasificación</title>
+    <title>Stats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -39,11 +39,11 @@
 
 
 
-    <div class="container tablecont table_matches">
+    <div class="container tablecont tablaavg">
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th colspan="2">Nombre</th>
+                    <th colspan="2">Club</th>
                     <th>Goles</th>
                     <th>Partidos</th>
                     <th>Avg</th>
@@ -57,11 +57,11 @@
 
     </div>
 
-    <div class="container tablecont table_contra">
+    <div class="container tablecont tablacontra">
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th colspan="2">Nombre</th>
+                    <th colspan="2">Club</th>
                     <th>Goles en contra como visitante</th>
                     <th>Partidos jugados</th>
                     
