--- a/matches.html
+++ b/matches.html
@@ -37,8 +37,13 @@
     </div>
   </nav>
 
-  <input class="form-control boton" type="text" id="myInput" onkeyup="buscarnombre()" placeholder="Search for names.." title="Type in a name">
+  <input class="form-control boton" type="text" id="myInput" placeholder="Search for names.." title="Type in a name">
 
+  <input class="inputradio" value="todos" id="radioTodos" name="filtro2" type="radio" checked>Todos <br>
+  <input class="inputradio" value="ganados" id="radioGana" name="filtro2" type="radio">Ganados <br>
+  <input class="inputradio" value="empatados" id="radioEmp"name="filtro2" type="radio">Empatados <br>
+  <input class="inputradio" value="perdidos" id="radioPer" name="filtro2" type="radio">Perdidos <br>
+  <input class="inputradio" value="proximos" id="radioProx" name="filtro2" type="radio">Próximos <br>
 
   <div class="container tablecont table_matches" id="tablaencuentros">
     <table class="table table-hover">
