filtros terminados pt2

--- a/matches.html
+++ b/matches.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <input class="form-control boton" type="text" id="myInput" placeholder="Search for names.." title="Type in a name">
+  <input class="form-control boton" type="text" id="searchbox" placeholder="Search for names.." title="Type in a name">
 
   <input class="inputradio" value="todos" id="radioTodos" name="filtro2" type="radio" checked>Todos <br>
   <input class="inputradio" value="ganados" id="radioGana" name="filtro2" type="radio">Ganados <br>
