filtro matches acabado y algún fetch

--- a/matches.html
+++ b/matches.html
@@ -37,6 +37,8 @@
     </div>
   </nav>
 
+  <input type="button" value="Buscar" id="boton" class="boton btn btn-primary">
+
   <input class="form-control boton" type="text" id="searchbox" placeholder="Search for names.." title="Type in a name">
 
   <input class="inputradio" value="todos" id="radioTodos" name="filtro2" type="radio" checked>Todos <br>
