--- a/standing.html
+++ b/standing.html
@@ -36,8 +36,6 @@
     </div>
   </nav>
 
-  <input class="form-control boton" type="text" id="myInput" onkeyup="buscarnombre()" placeholder="Search for names.." title="Type in a name">
-
 
   <div class="container tablecont">
     <table class="table table-hover tableclasi" id="tablaclasificacion">
@@ -85,8 +83,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script src="./standing.js"></script>
-  <script src="./functionsstanding.js"></script>
+  
+    <script src="./functionStandFetch.js"></script>
 
 </body>
 
