--- a/stats.html
+++ b/stats.html
@@ -98,8 +98,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="./matches.js"></script>
-    <script src="./functionStats.js"></script>
+    
+    <script src="./functionStatsFetch.js"></script>
 
 </body>
 
