--- a/standing.html
+++ b/standing.html
@@ -36,6 +36,7 @@
     </div>
   </nav>
 
+  <div id="spinner"></div>  
 
   <div class="container tablecont">
     <table class="table table-hover tableclasi" id="tablaclasificacion">
