--- a/matches.html
+++ b/matches.html
@@ -42,7 +42,7 @@
   <input class="form-control input container" type="text" id="searchbox" placeholder="Search for names.." title="Type in a name">
 
   <input type="button" value="Buscar" id="boton" class="boton btn btn-primary">
-  <div class="container">
+  <div>
     <input class="inputradio" value="todos" id="radioTodos" name="filtro2" type="radio" checked>Todos <br>
     <input class="inputradio" value="ganados" id="radioGana" name="filtro2" type="radio">Ganados <br>
     <input class="inputradio" value="empatados" id="radioEmp" name="filtro2" type="radio">Empatados <br>
