--- a/standing.html
+++ b/standing.html
@@ -38,7 +38,7 @@
 
   <div id="spinner"></div>  
 
-  <div class="container tablecont">
+  <div class="container tablecont table table-responsive">
     <table class="table table-hover tableclasi" id="tablaclasificacion">
       <thead class="thead-dark">
         <tr>
