--- a/stats.html
+++ b/stats.html
@@ -39,7 +39,7 @@
     <div id="spinner"></div>
 
 
-    <div class="container tablecont tablaavg">
+    <div class="container tblstatsavg tablaavg">
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -57,7 +57,7 @@
 
     </div>
 
-    <div class="container tablecont tablacontra">
+    <div class="container tblstatscontra tablacontra">
         <table class="table table-hover">
             <thead>
                 <tr>
