--- a/standing.html
+++ b/standing.html
@@ -38,10 +38,10 @@
 
   <div id="spinner"></div>  
 
-  <div class="container tablecont table-responsive">
+  <div class="container table-responsive tablastands">
     <table class="table table-hover tableclasi" id="tablaclasificacion">
       <thead class="thead-dark">
-        <tr>
+        <tr class="active">
           <th class="posicion"></th>
           <th colspan="2">Club</th>
           <th>PJ</th>
