--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
 </head>
 
 
@@ -36,12 +38,6 @@
       </div>
     </div>
   </nav>
-
-
-  <!--<div class="homebgimg container">
-    <img src="./images/football-header-desktop.jpg" alt="">
-  </div> -->
-
 
   <div id="carouselExampleFade" class="carousel slide carousel-fade container carouseldiv" data-bs-ride="carousel">
     <div class="carousel-inner">
