--- a/stats.html
+++ b/stats.html
@@ -39,7 +39,7 @@
     <div id="spinner"></div>
 
 
-    <div class="container tblstatsavg tablaavg">
+    <div class="container tblstatsavg">
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -57,8 +57,8 @@
 
     </div>
 
-    <div class="container tblstatscontra tablacontra">
-        <table class="table table-hover">
+    <div class="container tblstatscontra">
+        <table class="table table-hover tblchild">
             <thead>
                 <tr>
                     <th colspan="2">Club</th>
