--- a/matches.html
+++ b/matches.html
@@ -72,12 +72,26 @@
   </div>
   <div class="match3">
     <div class="boton">
-      <input type="button" value="Buscar" id="boton" class="btn btn-primary">
+      <input type="button" value="Buscar" id="boton" class="btn btn-primary botones btnBuscar">
     </div>
+    <input type="button" value="Limpiar" id="botonLimpiar" class="btn btn-primary botones">
   </div>
+  <!-- <div style="display: none" class="matchesp"  id="pDeMatch">
+    <input onclick="botonBorrar()" type="button" value="Borrar" id="borrarBtn" class="btn btn-primary borrar">
+    <p>Por favor, pulse sobre el botón "borrar" y busque un equipo</p>
+    
+  </div> -->
+  <!-- <div class="alert alert-warning alert-dismissible fade show" id="alertDiv" role="alert">
+    <strong>Por favor</strong> Introduzca el nombre de algún equipo
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true" id="xAlarma" >&times;</span>
+    </button>
+  </div> -->
 
-  <!-- </div> -->
-
+  <div class="alert alert-warning alert-dismissible fade" id="alertDiv" role="alert">
+    Por favor, introduzca el nombre de algún equipo.
+    <button type="button" class="btn-close" id="btnClose" aria-label="Close"></button>
+  </div>
 
 
   <div class="container tablecont table_matches" id="tablaencuentros">
